--- a/apps/css/index.css
+++ b/apps/css/index.css
@@ -7,6 +7,98 @@ body {
 
 .homepage {
   display: flex;
-  width: 70%;
+  width: 80%;
   height: 800px;
+}
+
+.navbar {
+  width: 100%;
+}
+
+.navbar-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: 2px;
+  list-style: none;
+}
+
+.navbar-row {
+  text-align: center;
+  align-items: center;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.navbar-row-title {
+  font-size: 18px;
+  width: 10%;
+  text-align: center;
+  font-weight: bold;
+}
+
+.navbar-row-btn {
+  margin-left: 10%;
+  font-family: "arial";
+}
+
+.navbar-row-btn button {
+  text-align: center;
+  background-color: transparent;
+  overflow: hidden;
+  border: none;
+  outline: none;
+  color: #000000;
+  padding: 14px 16px;
+  font-family: comic sans-serif;
+}
+
+.navbar-row-btn button:hover {
+  background-color: #ffcc01;
+  color: #000000;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.hero {
+  display: flex;
+  position: relative;
+  background-color: #96bece;
+  width: 100%;
+  height: 500px;
+}
+
+.hero-content {
+  display: flex;
+  background-color: #ffffff;
+  width: 20%;
+}
+
+.hero-content-column {
+  position: absolute;
+  margin-top: 10%;
+  margin-left: 8%;
+}
+
+.hero-content-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.hero-content-row input {
+  width: 200px;
+  border: none;
+  outline: none;
+}
+
+.btn {
+  cursor: pointer;
+  text-align: center;
+  background-color: #ffcc01;
+  overflow: hidden;
+  border: none;
+  outline: none;
+  color: #000000;
+  padding: 14px 16px;
+  font-family: comic sans-serif;
 }/*# sourceMappingURL=index.css.map */
