--- a/apps/css/index.scss
+++ b/apps/css/index.scss
@@ -1,6 +1,8 @@
 $white: #ffffff;
 $yellow: #ffcc01;
 $blue: #96bece;
+$black: #000000;
+$app_width: 80%;
 body {
     display: flex;
     background-color: $white;
@@ -9,6 +11,85 @@ body {
 }
 .homepage {
     display: flex;
-    width: 70%;
+    width: $app_width;
     height: 800px;
+}
+.navbar {
+    width: 100%;
+}
+.navbar-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: 2px;
+    list-style: none;
+}
+.navbar-row {
+    text-align: center;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.navbar-row-title {
+    font-size: 18px;
+    width: 10%;
+    text-align: center;
+    font-weight: bold;
+}
+.navbar-row-btn {
+    margin-left: 10%;
+    font-family: 'arial'
+}
+.navbar-row-btn button {
+    text-align: center;
+    background-color: transparent;
+    overflow: hidden;
+    border: none;
+    outline: none;
+    color: $black;
+    padding: 14px 16px;
+    font-family: comic sans-serif;
+}
+.navbar-row-btn button:hover {
+    background-color: $yellow;
+    color: $black;
+    border-radius: 8px;
+    cursor: pointer;
+}
+.hero {
+    display: flex;
+    position: relative;
+    background-color: $blue;
+    width: 100%;
+    height: 500px;
+}
+.hero-content{
+    display: flex;
+    background-color: $white;
+    width: $app_width/4;
+}
+.hero-content-column {
+    position: absolute;
+    margin-top: 10%;
+    margin-left: 8%;
+}
+.hero-content-row {
+    display: flex;
+    flex-direction: row;
+}
+.hero-content-row input {
+    width: 200px;
+    border: none;
+    outline: none;
+}
+.btn {
+    cursor: pointer;
+    text-align: center;
+    background-color: $yellow;
+    overflow: hidden;
+    border: none;
+    outline: none;
+    color: $black;
+    padding: 14px 16px;
+    font-family: comic sans-serif;
 }
