--- a/apps/css/index.scss
+++ b/apps/css/index.scss
@@ -3,6 +3,7 @@ $yellow: #ffcc01;
 $blue: #96bece;
 $black: #000000;
 $app_width: 80%;
+$montserrat: 'Montserrat SemiBold';
 body {
     display: flex;
     background-color: $white;
@@ -30,15 +31,13 @@ body {
     margin-left: 20px;
     margin-right: 20px;
 }
-.navbar-row-title {
-    font-size: 18px;
-    width: 10%;
-    text-align: center;
-    font-weight: bold;
+.navbar-row-logo {
+    display: flex;
+    width: 150px;
+    height: 50px;
 }
 .navbar-row-btn {
     margin-left: 10%;
-    font-family: 'arial'
 }
 .navbar-row-btn button {
     text-align: center;
@@ -48,7 +47,8 @@ body {
     outline: none;
     color: $black;
     padding: 14px 16px;
-    font-family: comic sans-serif;
+    font-family: $montserrat;
+    font-size: 14px;
 }
 .navbar-row-btn button:hover {
     background-color: $yellow;
@@ -72,24 +72,63 @@ body {
     position: absolute;
     margin-top: 10%;
     margin-left: 8%;
+    h1 {
+        font-family: 'Montserrat SemiBold';
+        font-weight: bold;
+        font-size: 50px;
+    }
+    .hero-content-row {
+        display: flex;
+        flex-direction: row;
+        height: 50px;
+        i {
+            display: flex;
+            align-items: center;
+            left: 15px;
+            top: 40px;
+            color: gray
+        }
+        input {
+            border: none;
+            outline: none;
+            width: 280px;
+        }
+        button {
+            cursor: pointer;
+            background-color: $yellow;
+            overflow: hidden;
+            border: none;
+            outline: none;
+            color: $black;
+            padding: 14px 16px;
+            font-size: 14px;
+        }
+    }
 }
-.hero-content-row {
+.hero-footer {
     display: flex;
     flex-direction: row;
-}
-.hero-content-row input {
-    width: 200px;
-    border: none;
-    outline: none;
-}
-.btn {
-    cursor: pointer;
-    text-align: center;
-    background-color: $yellow;
-    overflow: hidden;
-    border: none;
-    outline: none;
-    color: $black;
-    padding: 14px 16px;
-    font-family: comic sans-serif;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 100%;
+    .hero-footer-info{
+        display: flex;
+        background-color: $yellow;
+        i {
+            align-items: center;
+            margin-left: 20px;
+            color: gray
+        }
+        button {
+            cursor: pointer;
+            background-color: transparent;
+            overflow: hidden;
+            border: none;
+            outline: none;
+            color: $black;
+            padding: 14px 16px;
+            font-size: 14;
+        }
+    }
+    
 }
