--- a/apps/css/index.css
+++ b/apps/css/index.css
@@ -3,12 +3,14 @@ body {
   background-color: #ffffff;
   flex-direction: column;
   align-items: center;
+  font-family: Montserrat, sans-serif;
+  color: #1f373d;
 }
 
 .homepage {
   display: flex;
   width: 80%;
-  height: 800px;
+  height: 1000px;
 }
 
 .navbar {
@@ -46,15 +48,12 @@ body {
   overflow: hidden;
   border: none;
   outline: none;
-  color: #000000;
   padding: 14px 16px;
-  font-family: "Montserrat SemiBold";
   font-size: 14px;
 }
 
 .navbar-row-btn button:hover {
   background-color: #ffcc01;
-  color: #000000;
   border-radius: 8px;
   cursor: pointer;
 }
@@ -79,7 +78,6 @@ body {
   margin-left: 8%;
 }
 .hero-content-column h1 {
-  font-family: "Montserrat SemiBold";
   font-weight: bold;
   font-size: 50px;
 }
@@ -106,9 +104,10 @@ body {
   overflow: hidden;
   border: none;
   outline: none;
-  color: #000000;
   padding: 14px 16px;
   font-size: 14px;
+  font-weight: bold;
+  color: #1f373d;
 }
 
 .hero-footer {
@@ -125,7 +124,7 @@ body {
 .hero-footer .hero-footer-info i {
   align-items: center;
   margin-left: 20px;
-  color: gray;
+  color: #ffffff;
 }
 .hero-footer .hero-footer-info button {
   cursor: pointer;
@@ -133,7 +132,49 @@ body {
   overflow: hidden;
   border: none;
   outline: none;
-  color: #000000;
   padding: 14px 16px;
   font-size: 14;
+  font-weight: bold;
+  color: #1f373d;
+}
+
+.company {
+  display: flex;
+  flex-direction: row;
+  height: 40%;
+  align-items: center;
+}
+.company .company-row-primary {
+  display: flex;
+  flex-direction: column;
+  text-align: justify;
+  align-items: flex-start;
+  margin-left: 2%;
+  margin-right: 2%;
+  flex-wrap: wrap;
+  width: 50%;
+}
+.company .company-row-secondary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 50%;
+}
+.company .company-row-secondary .card {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  text-align: center;
+}
+.company .company-row-secondary .card .card-content {
+  width: 140px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 20px;
+  background-color: #f6f5f4;
+}
+.company .company-row-secondary .card .card-content h2 {
+  font-weight: bold;
+  color: #ffcc01;
 }/*# sourceMappingURL=index.css.map */
