--- a/apps/css/index.scss
+++ b/apps/css/index.scss
@@ -3,17 +3,20 @@ $yellow: #ffcc01;
 $blue: #96bece;
 $black: #000000;
 $app_width: 80%;
-$montserrat: 'Montserrat SemiBold';
+$montserrat: Montserrat,sans-serif;
+$text_color_global : #1f373d;
 body {
     display: flex;
     background-color: $white;
     flex-direction: column;
     align-items: center;
+    font-family: $montserrat;
+    color: $text_color_global;
 }
 .homepage {
     display: flex;
     width: $app_width;
-    height: 800px;
+    height: 1000px;
 }
 .navbar {
     width: 100%;
@@ -45,14 +48,11 @@ body {
     overflow: hidden;
     border: none;
     outline: none;
-    color: $black;
     padding: 14px 16px;
-    font-family: $montserrat;
     font-size: 14px;
 }
 .navbar-row-btn button:hover {
     background-color: $yellow;
-    color: $black;
     border-radius: 8px;
     cursor: pointer;
 }
@@ -73,7 +73,6 @@ body {
     margin-top: 10%;
     margin-left: 8%;
     h1 {
-        font-family: 'Montserrat SemiBold';
         font-weight: bold;
         font-size: 50px;
     }
@@ -86,7 +85,7 @@ body {
             align-items: center;
             left: 15px;
             top: 40px;
-            color: gray
+            color: gray;
         }
         input {
             border: none;
@@ -99,9 +98,10 @@ body {
             overflow: hidden;
             border: none;
             outline: none;
-            color: $black;
             padding: 14px 16px;
             font-size: 14px;
+            font-weight: bold;
+            color: $text_color_global;
         }
     }
 }
@@ -117,7 +117,7 @@ body {
         i {
             align-items: center;
             margin-left: 20px;
-            color: gray
+            color: $white
         }
         button {
             cursor: pointer;
@@ -125,10 +125,51 @@ body {
             overflow: hidden;
             border: none;
             outline: none;
-            color: $black;
             padding: 14px 16px;
             font-size: 14;
+            font-weight: bold;
+            color: $text_color_global;
         }
     }
     
+}
+.company {
+    display: flex;
+    flex-direction: row;
+    height: 40%;
+    align-items: center;
+    .company-row-primary {
+        display: flex;
+        flex-direction: column;
+        text-align: justify;
+        align-items:flex-start;
+        margin-left: 2%;
+        margin-right: 2%;
+        flex-wrap: wrap;
+        width: 50%;
+    }
+    .company-row-secondary {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+        width: 50%;
+        .card {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            text-align: center;
+            .card-content {
+                width: 140px;
+                margin-left: 10px;
+                margin-right: 10px;
+                margin-top: 20px;
+                background-color: #f6f5f4;
+                h2{
+                    font-weight: bold;
+                    color: $yellow;
+                }
+            }
+        }
+    }
 }
