--- a/apps/css/index.scss
+++ b/apps/css/index.scss
@@ -2,9 +2,11 @@ $white: #ffffff;
 $yellow: #ffcc01;
 $blue: #96bece;
 $black: #000000;
-$app_width: 80%;
-$montserrat: Montserrat,sans-serif;
+$app_width: 100%;
+$montserrat: Montserrat, sans-serif;
 $text_color_global : #1f373d;
+
+
 body {
     display: flex;
     background-color: $white;
@@ -12,15 +14,19 @@ body {
     align-items: center;
     font-family: $montserrat;
     color: $text_color_global;
+    margin: 0 50px;
+    padding: 0;
 }
+
 .homepage {
-    display: flex;
     width: $app_width;
     height: 1000px;
 }
+
 .navbar {
     width: 100%;
 }
+
 .navbar-row {
     display: flex;
     flex-direction: row;
@@ -28,20 +34,24 @@ body {
     margin-left: 2px;
     list-style: none;
 }
+
 .navbar-row {
     text-align: center;
     align-items: center;
     margin-left: 20px;
     margin-right: 20px;
 }
+
 .navbar-row-logo {
     display: flex;
     width: 150px;
     height: 50px;
 }
+
 .navbar-row-btn {
     margin-left: 10%;
 }
+
 .navbar-row-btn button {
     text-align: center;
     background-color: transparent;
@@ -51,11 +61,13 @@ body {
     padding: 14px 16px;
     font-size: 14px;
 }
+
 .navbar-row-btn button:hover {
     background-color: $yellow;
     border-radius: 8px;
     cursor: pointer;
 }
+
 .hero {
     display: flex;
     position: relative;
@@ -63,23 +75,28 @@ body {
     width: 100%;
     height: 500px;
 }
-.hero-content{
+
+.hero-content {
     display: flex;
     background-color: $white;
     width: $app_width/4;
 }
+
 .hero-content-column {
     position: absolute;
     margin-top: 10%;
     margin-left: 8%;
+
     h1 {
         font-weight: bold;
         font-size: 50px;
     }
+
     .hero-content-row {
         display: flex;
         flex-direction: row;
         height: 50px;
+
         i {
             display: flex;
             align-items: center;
@@ -87,11 +104,13 @@ body {
             top: 40px;
             color: gray;
         }
+
         input {
             border: none;
             outline: none;
             width: 280px;
         }
+
         button {
             cursor: pointer;
             background-color: $yellow;
@@ -105,20 +124,24 @@ body {
         }
     }
 }
+
 .hero-footer {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: flex-end;
     width: 100%;
-    .hero-footer-info{
+
+    .hero-footer-info {
         display: flex;
         background-color: $yellow;
+
         i {
             align-items: center;
             margin-left: 20px;
             color: $white
         }
+
         button {
             cursor: pointer;
             background-color: transparent;
@@ -131,45 +154,100 @@ body {
             color: $text_color_global;
         }
     }
-    
+
 }
+
 .company {
     display: flex;
     flex-direction: row;
     height: 40%;
     align-items: center;
+    margin-top: 75px;
+
     .company-row-primary {
         display: flex;
         flex-direction: column;
         text-align: justify;
-        align-items:flex-start;
+        align-items: flex-start;
         margin-left: 2%;
         margin-right: 2%;
         flex-wrap: wrap;
         width: 50%;
     }
+
     .company-row-secondary {
         display: flex;
         flex-direction: column;
         align-items: center;
         flex-wrap: wrap;
         width: 50%;
+
         .card {
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
             text-align: center;
+
             .card-content {
                 width: 140px;
                 margin-left: 10px;
                 margin-right: 10px;
                 margin-top: 20px;
                 background-color: #f6f5f4;
-                h2{
+
+                h2 {
                     font-weight: bold;
                     color: $yellow;
                 }
             }
         }
+    }
+}
+
+//appartement
+
+.appartement {
+    width: 100%;
+    height: auto;
+    margin-left: 20px;
+    margin-top: 75px;
+    //background-color: #f6f5f4;
+    padding-top: 20px;
+
+
+    h2 {
+        padding-top: 20px;
+    }
+
+    .appart-container {
+        display: grid;
+        padding-top: 30px;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
+
+        .appart-card-primary {
+            width: 300px;
+            height: 450px;
+
+            border-radius: 10px;
+            box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.3);
+
+            .appart-card-items-img {
+                height: 340px;
+                background-color: $blue;
+                margin-bottom: 20px;
+                border-radius: 10px 10px 0 0;
+            }
+
+            .appart-card-items-info {
+                padding: 15px;
+                font-weight: 700;
+
+                span {
+                    font-size: 15px;
+                }
+            }
+        }
+
     }
 }
