--- a/apps/css/index.css
+++ b/apps/css/index.css
@@ -181,38 +181,58 @@ body {
   color: #ffcc01;
 }
 
-.appartement {
+#appartement {
   width: 100%;
   height: auto;
-  margin-left: 20px;
+  padding-left: 20px;
   margin-top: 75px;
+  background-color: #f6f5f4;
   padding-top: 20px;
 }
-.appartement h2 {
+#appartement h2 {
   padding-top: 20px;
 }
-.appartement .appart-container {
+#appartement .appart-container {
   display: grid;
   padding-top: 30px;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
+  align-content: center;
 }
-.appartement .appart-container .appart-card-primary {
+#appartement .appart-container .appart-card-primary {
   width: 300px;
   height: 450px;
   border-radius: 10px;
   box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.3);
 }
-.appartement .appart-container .appart-card-primary .appart-card-items-img {
+#appartement .appart-container .appart-card-primary .appart-card-items-img {
   height: 340px;
   background-color: #96bece;
-  margin-bottom: 20px;
   border-radius: 10px 10px 0 0;
 }
-.appartement .appart-container .appart-card-primary .appart-card-items-info {
+#appartement .appart-container .appart-card-primary .appart-card-items-info {
   padding: 15px;
   font-weight: 700;
+  margin-top: 15px;
 }
-.appartement .appart-container .appart-card-primary .appart-card-items-info span {
+#appartement .appart-container .appart-card-primary .appart-card-items-info span {
   font-size: 15px;
+}
+#appartement .appart-container .appart-card-primary .appart-card-items-info .appart-card-items-info-composite {
+  display: inline;
+}
+#appartement .appart-container .appart-card-primary .appart-card-items-info .appart-card-items-info-composite .appart-card-items-info-composite-price {
+  position: relative;
+  float: left;
+  margin-top: 20px;
+  color: #ffcc01;
+}
+#appartement .appart-container .appart-card-primary .appart-card-items-info .appart-card-items-info-composite .appart-card-items-info-composite-shape {
+  position: relative;
+  float: right;
+  margin-top: 20px;
+}
+#appartement .appart-container .appart-card-primary .appart-card-items-info .appart-card-items-info-composite .appart-card-items-info-composite-shape span {
+  padding: 0 10px;
+  font-weight: lighter;
 }/*# sourceMappingURL=index.css.map */
