--- a/apps/css/index.css
+++ b/apps/css/index.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
   font-family: Montserrat, sans-serif;
   color: #1f373d;
-  margin: 0 50px;
+  margin: 0;
   padding: 0;
 }
 
@@ -29,8 +29,6 @@ body {
 .navbar-row {
   text-align: center;
   align-items: center;
-  margin-left: 20px;
-  margin-right: 20px;
 }
 
 .navbar-row-logo {
@@ -57,6 +55,11 @@ body {
   background-color: #ffcc01;
   border-radius: 8px;
   cursor: pointer;
+}
+
+.content-wrapper {
+  max-width: 970px;
+  margin: auto;
 }
 
 .hero {
@@ -186,7 +189,7 @@ body {
   height: auto;
   margin-top: 75px;
   background-color: #f6f5f4;
-  padding: 20px 0 75px 20px;
+  padding: 20px 0 75px 0;
 }
 #appartement h2 {
   padding-top: 20px;
@@ -239,10 +242,13 @@ body {
 #agents {
   width: 100%;
   height: auto;
-  padding: 20px 0 75px 20px;
+  padding: 20px 0 75px 0;
 }
 #agents h2 {
   padding-top: 20px;
+}
+#agents p {
+  width: 32%;
 }
 #agents .agent-container {
   display: grid;
