--- a/apps/css/index.scss
+++ b/apps/css/index.scss
@@ -14,7 +14,7 @@ body {
     align-items: center;
     font-family: $montserrat;
     color: $text_color_global;
-    margin: 0 50px;
+    margin: 0;
     padding: 0;
 }
 
@@ -38,8 +38,8 @@ body {
 .navbar-row {
     text-align: center;
     align-items: center;
-    margin-left: 20px;
-    margin-right: 20px;
+    //margin-left: 20px;
+    //margin-right: 20px;
 }
 
 .navbar-row-logo {
@@ -66,6 +66,11 @@ body {
     background-color: $yellow;
     border-radius: 8px;
     cursor: pointer;
+}
+
+.content-wrapper {
+    max-width: 970px;
+    margin: auto;
 }
 
 .hero {
@@ -211,8 +216,7 @@ body {
     height: auto;
     margin-top: 75px;
     background-color: #f6f5f4;
-    padding: 20px 0 75px 20px;
-
+    padding: 20px 0 75px 0;
 
     h2 {
         padding-top: 20px;
@@ -280,13 +284,15 @@ body {
 #agents {
     width: 100%;
     height: auto;
-    padding: 20px 0 75px 20px;
+    padding: 20px 0 75px 0;
 
     h2 {
         padding-top: 20px;
     }
 
-    p {}
+    p {
+        width: 32%;
+    }
 
     .agent-container {
         display: grid;
