--- a/apps/css/index.scss
+++ b/apps/css/index.scss
@@ -5,8 +5,7 @@ $black: #000000;
 $app_width: 100%;
 $montserrat: Montserrat, sans-serif;
 $text_color_global : #1f373d;
-
-
+$footerwidth : '100%';
 body {
     display: flex;
     background-color: $white;
@@ -38,8 +37,6 @@ body {
 .navbar-row {
     text-align: center;
     align-items: center;
-    //margin-left: 20px;
-    //margin-right: 20px;
 }
 
 .navbar-row-logo {
@@ -84,7 +81,7 @@ body {
 .hero-content {
     display: flex;
     background-color: $white;
-    width: $app_width/4;
+    width: 25%;
 }
 
 .hero-content-column {
@@ -278,7 +275,139 @@ body {
 }
 
 
+//howitworks
+#howitworks{
+    width: $footerwidth;
+    height: 420px;
+    font-family: Arial, Helvetica, sans-serif;
+    .howitworks-title{
+        background-color: transparent;
+        width: $footerwidth;
+        padding-left: 300px;
+        padding-right: 500px;
+        height: 120px;
+    }
+    .howitworks-gridcontainers{
+        justify-content: center;
+        display: grid;
+        grid-template-columns: repeat(3,230px);
+        .howitworks-grides{
+            overflow: hidden;
+            background-color: transparent;
+            width: 210px;
+            height: 250px;
+            color: #1f373d;
+            h3{
+                font-size: 130px;
+                position: relative;
+                top: -60px;
+                left: -15px;
+            }
+            h4{
+                font-size: 18px;
+                position: relative;
+                top: -60px;
+            }
+            p{
+                position: relative;
+                top: -60px;
+            }
+            a{
+                position: relative;
+                top: -40px;
+                left: 50px;
+                color: #1f373d;
+            }&::after{
+                display: inline-block;
+                background-color: #1f373d;
+                content: "";
+                width: 100px;
+                height: 2px;
+                position: relative;
+                top: -25px;
+                left: -50px;
 
+            }
+        }
+        .howitworks-gridesn1{
+            overflow: hidden;
+            background-color:#ffcc01;
+            width: 210px;
+            height: 250px;
+            color: #ffff;
+            text-align: center;
+            h3{
+                font-size: 130px;
+                position: relative;
+                top: -60px;
+                font-family: Arial, Helvetica, sans-serif;
+                left: -45px;
+            }
+            h4{
+                font-size: 18px;
+                position: relative;
+                top: -60px;
+            }
+            p{
+                position: relative;
+                top: -60px;
+            }
+            a{
+                position: relative;
+                top: -40px;
+                left: 50px;
+                color: #ffff;
+            }&::after{
+                display: inline-block;
+                background-color: white;
+                content: "";
+                width: 100px;
+                height: 2px;
+                position: relative;
+                top: -25px;
+                left: -50px;
+
+            }
+        }
+    }
+}
+
+
+#services{
+    width: 100%;
+    background-color: transparent;
+    color: #1f373d;
+    height: 550px;
+    font-family: Arial, Helvetica, sans-serif;
+    .services-title{
+        background-color: transparent;
+        width: $footerwidth;
+        padding-left: 300px;
+        height: 120px;
+    }
+    .services-gridcontainer{
+        justify-content: center;
+        display: grid;
+        grid-template-columns: repeat(2,380px);
+        gap: 50px;
+        .services-griden1{
+            width: 370px;
+            height: 370px;
+            background-color: #acd1e1;
+        }
+        .services-gride{
+            width: 370px;
+            height: 370px;
+            background-color: transparent;
+            h3{
+                padding-top:10px;
+            }
+            p{
+                padding-top:10px;
+            }
+        }
+    }
+}
 //Section Agents
 
 #agents {
@@ -345,6 +474,190 @@ body {
                     }
                 }
             }
+        }
+    }
+}
+
+#awesome{
+    justify-content: center;
+    background-color: transparent;
+    width: $footerwidth;
+    height: 800px;
+    display: grid;
+    grid-template-columns: repeat(2,370px);
+    .awesome-gride{
+        background-color: transparent;
+        width: 350px;
+        height: 200px;
+        .gride-gray{
+            background-color: #8da4be;
+            width: 350px;
+            height: 200px;
+            .gride-gray-elt{
+                background-color: #ffcc01;
+                width: 200px;
+                height: 50px;
+                position: relative;
+                left: 80px;
+                top: 175px;
+                p{
+                    text-align: center;
+                    font-size: 15px;
+                    font-family: Arial, Helvetica, sans-serif;
+                    line-height: 50px;
+                    color: white;
+                    padding: 0 20px;
+                    span{
+                        color: #212121;
+                        float: right;
+                    }
+                }
+            }
+            .gride-gray-eltn2{
+                background-color: #ffcc01;
+                width: 200px;
+                height: 50px;
+                position: relative;
+                left: 200px;
+                top: 175px;
+                p{
+                    text-align: center;
+                    font-size: 15px;
+                    font-family: Arial, Helvetica, sans-serif;
+                    line-height: 50px;
+                    color: white;
+                    padding: 0 20px;
+                    span{
+                        color: #212121;
+                        float: right;
+                    }
+                }
+            }
+        }
+        .gride-white{
+            padding-left: 45px;
+            text-align:left;
+            background-color: transparent;
+            width: 350px;
+            height: 200px;
+            font-family: Arial, Helvetica, sans-serif;
+            h2{
+                padding-bottom: 20px;
+            }
+        }
+        .gride-whiten2{
+            padding-right: 45px;
+            text-align:end;
+            background-color: transparent;
+            width: 350px;
+            height: 200px;
+            font-family: Arial, Helvetica, sans-serif;
+            h2{
+                padding-bottom: 25px;
+            }
+        }
+        .gride-whiten3{
+            padding-left: 45px;
+            text-align:left;
+            background-color: transparent;
+            width: 350px;
+            height: 200px;
+            font-family: Arial, Helvetica, sans-serif;
+            h2{
+                padding-bottom: 25px;
+            }
+            p{
+                padding-bottom: 25px;
+            }
+            button{
+                background-color: #1f373d;
+                width: 150px;
+                height: 40px;
+                color: #ffff;
+                box-shadow: none;
+                border: none;
+                font-weight: bold;
+            }
+        }
+
+    }
+}
+
+/* footer */
+footer{
+    background-color: #1f373d;
+    width: 100%;
+    height: 400px;
+    .footer-head{
+        align-items: center;
+        width: $footerwidth;
+        background-color: transparent;
+        height: 130px;
+        display: flex;
+        h2{
+            color: #ffff;
+            font-family: Arial, Helvetica, sans-serif;
+            padding: 0 250px;
+        }
+        .footer-head-input{
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            input{
+                width: 350px;
+                line-height: 30px;
+                display: block;
+                height: 50px;
+                outline: 0;
+            }
+            .icon{
+                position: absolute;
+                left: 320px;
+                top: -0.9;
+                font-size: 20px;
+                color: #212121;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+    }
+    .footer-head-divider{
+        margin-left: 250px;
+        width: 825px;
+        height: 1px;
+        background-color: #ffff;
+        display: inline-block;
+    }
+    .footer-grid{
+        padding-top: 50px;
+        padding-left: 250px;
+        padding-right: 150px;
+        background-color: transparent;
+        width: $footerwidth;
+        height: 250px;
+        display: grid;
+        grid-template-columns: 32% 17% 17% 17% 17%;
+        color: #ffff;
+        font-family: Arial, Helvetica, sans-serif;
+
+        .footer-grid-elt1 h3{
+            padding-bottom: 60px;
+        }
+        h4{
+            color:#919eb1;
+            padding-bottom: 30px;
+            font-size: 10px;
+        }
+        ul li{
+            padding-bottom: 10px;
+            list-style: none;
+            a{
+                color: #ffff;
+                font-size: 12px;
+                text-decoration: none;
+            }   
         }
     }
 }
